Fixed dark mode modals

--- a/src/presentation/apps/sidebar/App.css
+++ b/src/presentation/apps/sidebar/App.css
@@ -42,10 +42,14 @@
   --text-secondary: #5f6368;
   --selected-bg: #c2dbff;
   --button-bg: #e9e9e9;
-  --border-color: #ddd;
+  --border-color: #c4c4c4;
   --line-color: #f2f6fc;
   --plain-button: #000;
   --plain-button-hover: #333;
+  --modal-button-primary: #323232;
+  --modal-button-primary-hover: #555;
+  --modal-button-secondary: #fff;
+  --modal-button-secondary-hover: #f4f4f4;
 }
 
 .dark {
@@ -58,6 +62,10 @@
   --line-color: #555;
   --plain-button: #555;
   --plain-button-hover: #333;
+  --modal-button-primary: #fff;
+  --modal-button-primary-hover: #bbb;
+  --modal-button-secondary: #323232;
+  --modal-button-secondary-hover: #444;
 }
 
 :root {
