--- a/src/presentation/apps/sidebar/components/modalPopup.css
+++ b/src/presentation/apps/sidebar/components/modalPopup.css
@@ -6,7 +6,7 @@
   width: 100%;
   height: 100%;
   border-radius: 16px;
-  background-color: var(--bg-primary);
+  background-color: rgb(0 0 0 / 40%);
   color: var(--text-primary);
 }
 
@@ -42,24 +42,24 @@ p {
 }
 
 button.primary {
-  color: #f4f4f4;
-  background-color: #323232;
+  color: var(--modal-button-secondary);
+  background-color: var(--modal-button-primary);
   padding: 12px 0;
 }
 
 button.secondary {
-  color: #323232;
-  background-color: white;
-  border: 1px solid #c4c4c4;
+  color: var(--text-primary);
+  background-color: var(--bg-primary);
+  border: 1px solid var(--border-color);
 }
 
 button.primary:hover {
-  background-color: #555;
+  background-color: var(--modal-button-primary-hover);
   cursor: pointer;
 }
 
 button.secondary:hover {
-  background-color: #f4f4f4;
+  background-color: var(--modal-button-secondary-hover);
   cursor: pointer;
 }
 
