--- a/src/presentation/apps/sidebar/components/toggle.css
+++ b/src/presentation/apps/sidebar/components/toggle.css
@@ -26,7 +26,7 @@
   position: absolute;
   cursor: pointer;
   inset: 0;
-  background-color: #fff;
+  background-color: var(--bg-primary);
   border: 1px solid #adb5bd;
   transition: 0.4s;
   border-radius: 30px;
